--- a/colors.html
+++ b/colors.html
@@ -2,6 +2,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>Turtle Interactive Software</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<script type='text/javascript' src='menu_var.js'></script>
